--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>Desenvolvido porghjkl</p>
     </footer>
     <script type="module" src="common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
